--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,21 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.rufflez.myapplication" >
+    package="com.example.rufflez.myapplication">
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.DesignDemo" >
+        android:theme="@style/MyMaterialTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MoreFoodActivity"
+            android:label="@string/title_activity_more_food"
+            android:theme="@style/MyMaterialTheme" />
+        <activity
+            android:name=".FoodDetailActivity"
+            android:label="@string/title_activity_food_detail"
+            android:theme="@style/MyMaterialTheme"></activity>
     </application>
 
 </manifest>
