--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     compile 'com.android.support:design:23.1.0'
     compile 'com.android.support:recyclerview-v7:23.1.0'
     compile 'com.android.support:cardview-v7:23.1.0'
+    compile 'com.etsy.android.grid:library:1.0.5'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
