--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,16 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/chef"
         android:label="@string/app_name"
         android:theme="@style/MyMaterialTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:label="Cook Book"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".SplashScreen"
+            android:theme="@style/MyMaterialTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,8 +23,8 @@
         <activity
             android:name=".DetailFoodActivity"
             android:label="@string/title_activity_detail_food"
-            android:theme="@style/MyMaterialTheme"></activity>
-
+            android:theme="@style/MyMaterialTheme" />
+        <activity android:name=".MoreActivity"></activity>
     </application>
 
 </manifest>
