--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:support-v4:23.1.0'
     compile 'com.android.support:support-v13:23.1.0'
@@ -29,5 +29,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.1.0'
     compile 'com.etsy.android.grid:library:1.0.5'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-
+    compile 'com.getbase:floatingactionbutton:1.10.1'
 }
