--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.rufflez.myapplication"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0">
 
     <uses-sdk
         android:minSdkVersion="19"
@@ -12,18 +12,22 @@
         android:name="android.support.VERSION"
         android:value="26.0.0-alpha1" />
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/chef"
         android:label="@string/app_name"
-        android:theme="@style/MyMaterialTheme" >
+        android:theme="@style/MyMaterialTheme">
         <activity
             android:name="com.example.rufflez.Cookbook.MainActivity"
             android:label="Hôm nay bạn nấu gì?"
             android:windowSoftInputMode="adjustPan" />
         <activity
             android:name="com.example.rufflez.Cookbook.SplashScreen"
-            android:theme="@style/MyMaterialTheme" >
+            android:theme="@style/MyMaterialTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -43,6 +47,10 @@
             android:name="com.example.rufflez.Cookbook.AboutActivity"
             android:label="About"
             android:theme="@style/MyMaterialTheme" />
+        <activity
+            android:name="com.example.rufflez.Cookbook.SearchActivity"
+            android:label="@string/title_activity_search"
+            android:theme="@style/MyMaterialTheme"></activity>
     </application>
 
 </manifest>
