--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     compile 'com.google.guava:guava:18.0'
     compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
     compile 'com.github.traex.rippleeffect:library:1.3'
+    compile 'com.miguelcatalan:materialsearchview:1.4.0'
 }
