--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,8 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/chef"
-        android:label="@string/app_name"
+        android:icon="@drawable/icon"
+        android:label="Hôm nay bạn nấu gì?"
         android:theme="@style/MyMaterialTheme">
         <activity
             android:name="com.example.rufflez.Cookbook.activity.MainActivity"
