--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,12 @@ android {
     productFlavors {
     }
 }
-
+repositories {
+    jcenter()
+    maven {
+        url "https://jitpack.io"
+    }
+}
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile('com.mikepenz:materialdrawer:2.9.8') {
@@ -40,4 +45,5 @@ dependencies {
     compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
     compile 'com.github.traex.rippleeffect:library:1.3'
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
+    compile 'com.github.javiersantos:MaterialStyledDialogs:2.1'
 }
